--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "team2-nodeuserapp",
+  "name": "express-chat-user",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -15,8 +15,10 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "mysql2": "^3.6.5",
-    "sequelize": "^6.35.2"
+    "md5": "^2.3.0",
+    "moment": "^2.30.1",
+    "mongoose": "^6.12.4",
+    "mongoose-sequence": "^5.3.1",
+    "morgan": "~1.9.1"
   }
 }
